test/simple/ill-typed/singletype_poly.caprice
(* TEST
  include refute;
*)


(* This `t` argument is the same as (dependent t := a) *)
let f (type a b) (dependent t := a) (x : t) : b =
  x

